Fixes blog post pagination text being cut off on the right

--- a/_sass/_opensearch.scss
+++ b/_sass/_opensearch.scss
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
+    box-sizing: border-box;
+    padding-right: 10px;
+    
     .next, .prev {
         display: block;
         flex: 1;
